fix spacing in aboutme

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -66,7 +66,7 @@ p.AboutMe {
     height: 100%;
   }
   max-width: 75%;
-  margin: 5% 0 5% 0;
+  margin: 5% 0 10% 0;
 }
 
 button.contact-me {
